# Koolang-old

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md  meson.build  meson_options.txt
cmake/: bootstrap.cmake  create_test.cmake
cmake/compiler/: clang_gcc.cmake  msvc.cmake
example/: main.k
example/kir/: a.k  complex.k
example/kir/b/: c.k  mod.k
src/: CMakeLists.txt  File.h  main.cpp  meson.build
src/air/: CMakeLists.txt  Inst.h  InstData.h  LifetimeTable.h  Module.h  ModuleManager.cpp  ModuleManager.h  Pool.cpp  Pool.h  PoolKey.cpp  PoolKey.h  Printer.cpp  Printer.h  Sema.cpp  Sema.h  TypeInst.h  meson.build  type.cpp  type.h  value.cpp  value.h
src/air/sema/: globalDecl.cpp  kirAs.cpp  kirBreak.cpp  kirDeclRef.cpp
src/air/symbol/: Namespace.h  Record.h  SymbolMap.cpp  SymbolMap.h
src/ast/: Ast.h  CMakeLists.txt  Node.cpp  Node.h  Parser.cpp  Parser.h  Token.h  TokenList.cpp  TokenList.h  Tokenizer.cpp  Tokenizer.h  Vis.h  meson.build
src/ast/parser/: expressions.cpp  statements.cpp
src/codes/: err.h  warn.h
src/kir/: AstGen.cpp  AstGen.h  CMakeLists.txt  Extra.h  Inst.h  InstData.h  Printer.cpp  Printer.h  RefInst.h  Scope.cpp  Scope.h  meson.build
src/logger/: CMakeLists.txt  Label.cpp  Label.h  Range.h  Record.cpp  Record.h  colors.cpp  colors.h  meson.build
src/terminal/: CMakeLists.txt  globals.cpp  globals.h  meson.build  terminal.cpp  terminal.h
src/util/: Cache.h  ConstMap.h  Index.h  StrCache.h  ThreadPool.h  alias.h  array_util.h  convert.h  debug.h  hash_combine.h  string_hash.h
test/: AstGen.test.cpp  CMakeLists.txt  Parser.test.cpp  Pool.test.cpp  Tokenizer.test.cpp  meson.build  test.h
